attempt for adding header image

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 ---
 layout: home
 author_profile: true
+header:
+  image: /assets/images/header-image.jpg
+  image_description: "A header image"
 ---
 
 Guess this is my homepage. _(:з」∠)_
