edit the home a bit

--- a/index.html
+++ b/index.html
@@ -6,4 +6,7 @@ header:
   image_description: "A header image"
 ---
 
-Guess this is my homepage. _(:з」∠)_
+<div style = "display: grid; grid-template-columns: auto auto">
+  <div style = "grid-column: 1/2;">A text placeholder</div>
+  <div style = "grid-column: 2/3;">A pic placeholder</div>
+</div>
